# repolens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRD.md  README.md  ROADMAP.md  TECH_DESIGN.md  pyproject.toml
.github/ISSUE_TEMPLATE/: analysis_quality_issue.md  bug_report.md  feature_request.md
docs/: RELEASE_CHECKLIST.md
examples/: PROJECT_MAP.example.md  PROJECT_MAP.markupsafe.example.md
src/repolens/: __init__.py  analyzer.py  cli.py  config.py  context_builder.py  errors.py  git_source.py  llm.py  report.py  scanner.py
tests/: test_analyzer.py  test_cli.py  test_context_builder.py  test_docs.py  test_git_source.py  test_llm.py  test_report.py  test_scanner.py
